--- a/app/views/fulcrum/_institutions.html.erb
+++ b/app/views/fulcrum/_institutions.html.erb
@@ -3,7 +3,7 @@
   size = 12
 %>
 <h1>Institutions</h1>
-<form name="filter" method="get" action="<%= partial_fulcrum_path(:institutions) %>">
+<form name="filter" method="get" action="<%= fulcrum_partials_path(:institutions) %>">
   <table class="table table-striped" summary="Institution List">
     <tr>
       <th><%= link_to(new_institution_path) do %>
@@ -13,24 +13,27 @@
       <th><label for="identifier_like">Identifier</label></th>
       <th><label for="name_like">Name</label></th>
       <th><label for="entity_id_like">Entity ID</label></th>
+      <th>Policies</th>
+    </tr>
+    <tr>
+      <td><button name="submit" type="submit" value="filter">Filter</button></td>
+      <td><input type="text" name="identifier_like" value="<%= params[:identifier_like] %>" size="<%= size %>"></td>
+      <td><input type="text" name="name_like" value="<%= params[:name_like] %>" size="<%= 2 * size %>"></td>
+      <td><input type="text" name="entity_id_like" value="<%= params[:entity_id_like] %>" size="<%= 3 * size %>"></td>
+      <td></td>
     </tr>
     <% institutions.each do |institution| %>
       <tr>
-        <td><%= link_to(institution_path(institution)) do %>
+        <td><%= link_to(fulcrum_partial_path(:institutions, Base64.urlsafe_encode64(institution.identifier))) do %>
             <span class="glyphicon glyphicon-sunglasses" aria-hidden="true"></span> Show
           <% end %>
         </td>
         <td><%= institution.identifier %></td>
         <td><%= institution.name %></td>
         <td><%= institution.entity_id %></td>
+        <td><%= institution.policies.count() %></td>
       </tr>
     <% end %>
-    <tr>
-      <td><button name="submit" type="submit" value="filter">Filter</button></td>
-      <td><input type="text" name="identifier_like" value="<%= params[:identifier_like] %>" size="<%= size %>"></td>
-      <td><input type="text" name="name_like" value="<%= params[:name_like] %>" size="<%= size %>"></td>
-      <td><input type="text" name="entity_id_like" value="<%= params[:entity_id_like] %>" size="<%= 3 * size %>"></td>
-    </tr>
   </table>
 </form>
 <%= paginate institutions %>
