--- a/app/views/fulcrum/_lessees.html.erb
+++ b/app/views/fulcrum/_lessees.html.erb
@@ -3,7 +3,7 @@
   size = 24
 %>
 <h1>Lessees</h1>
-<form name="filter" method="get" action="<%= partial_fulcrum_path(:lessees) %>">
+<form name="filter" method="get" action="<%= fulcrum_partials_path(:lessees) %>">
   <table class="table table-striped" summary="Lessee List">
     <tr>
       <th>
@@ -15,6 +15,13 @@
       <th>Institution</th>
       <th>Products</th>
       <th>Components</th>
+    </tr>
+    <tr>
+      <td><button name="submit" type="submit" value="filter">Filter</button></td>
+      <td><input type="text" name="identifier_like" value="<%= params[:identifier_like] %>" size="<%= size %>" aria-label="identifier_like"></td>
+      <td></td>
+      <td></td>
+      <td></td>
     </tr>
     <% lessees.each do |lessee| %>
       <tr>
@@ -28,13 +35,6 @@
         <td><%= lessee.components.count() %></td>
       </tr>
     <% end %>
-    <tr>
-      <td><button name="submit" type="submit" value="filter">Filter</button></td>
-      <td><input type="text" name="identifier_like" value="<%= params[:identifier_like] %>" size="<%= size %>"></td>
-      <td></td>
-      <td></td>
-      <td></td>
-    </tr>
   </table>
 </form>
 <%= paginate lessees %>
