--- a/app/views/fulcrum/_users.html.erb
+++ b/app/views/fulcrum/_users.html.erb
@@ -3,24 +3,35 @@
   size = 24
 %>
 <h1>Users</h1>
-<form name="filter" method="get" action="<%= partial_fulcrum_path(:users) %>">
+<form name="filter" method="get" action="<%= fulcrum_partials_path(:users) %>">
   <table class="table table-striped" summary="User List">
     <tr>
       <th>
-        <%#= link_to(new_user_path) do %>
+        <%= link_to(new_user_path) do %>
           <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> New
-        <%# end %>
+        <% end %>
       </th>
-      <th><label for="email_like">EMail</label></th>
+      <th><label for="identifier_like">Identifier</label></th>
+      <th><label for="name_like">Name</label></th>
+      <th><label for="email_like">eMail</label></th>
       <th>Roles</th>
+    </tr>
+    <tr>
+      <td><button name="submit" type="submit" value="filter">Filter</button></td>
+      <td><input type="text" name="identifier_like" value="<%= params[:identifier_like] %>" size="<%= size %>" aria-label="identifier_like"></td>
+      <td><input type="text" name="name_like" value="<%= params[:name_like] %>" size="<%= size %>" aria-label="name_like"></td>
+      <td><input type="text" name="email_like" value="<%= params[:email_like] %>" size="<%= size %>" aria-label="email_like"></td>
+      <td></td>
     </tr>
     <% users.each do |user| %>
       <tr>
         <td>
-          <%= link_to(hyrax.user_path(user)) do %>
+          <%= link_to(fulcrum_partial_path(:users, Base64.urlsafe_encode64(user.email))) do %>
             <span class="glyphicon glyphicon-sunglasses" aria-hidden="true"></span> Show
           <% end %>
         </td>
+        <td><%= user.email %></td>
+        <td><%= user.display_name %></td>
         <td><%= user.email %></td>
         <td>
           <% user_presenter = UserPresenter.new(user, current_user) %>
@@ -30,11 +41,6 @@
         </td>
       </tr>
     <% end %>
-    <tr>
-      <td><button name="submit" type="submit" value="filter">Filter</button></td>
-      <td><input type="text" name="email_like" value="<%= params[:email_like] %>" size="<%= size %>"></td>
-      <td></td>
-    </tr>
   </table>
 </form>
 <%= paginate users %>
