--- a/app/views/fulcrum/_individuals.html.erb
+++ b/app/views/fulcrum/_individuals.html.erb
@@ -1,9 +1,9 @@
 <%
   individuals = Individual.filter(identifier_like: params[:identifier_like], name_like: params[:name_like], entity_id_like: params[:entity_id_like]).order(identifier: :asc).page(params[:page])
-  size = 12
+  size = 24
 %>
 <h1>Individuals</h1>
-<form name="filter" method="get" action="<%= partial_fulcrum_path(:individuals) %>">
+<form name="filter" method="get" action="<%= fulcrum_partials_path(:individuals) %>">
   <table class="table table-striped" summary="Individual List">
     <tr>
       <th><%= link_to(new_individual_path) do %>
@@ -12,25 +12,28 @@
       </th>
       <th><label for="identifier_like">Identifier</label></th>
       <th><label for="name_like">Name</label></th>
-      <th><label for="email_like">EMail</label></th>
+      <th><label for="email_like">eMail</label></th>
+      <th>Policies</th>
+    </tr>
+    <tr>
+      <td><button name="submit" type="submit" value="filter">Filter</button></td>
+      <td><input type="text" name="identifier_like" value="<%= params[:identifier_like] %>" size="<%= size %>" aria-label="identifier_like"></td>
+      <td><input type="text" name="name_like" value="<%= params[:name_like] %>" size="<%= size %>" aria-label="name_like"></td>
+      <td><input type="text" name="email_like" value="<%= params[:email_like] %>" size="<%= size %>" aria-label="email_like"></td>
+      <td></td>
     </tr>
     <% individuals.each do |individual| %>
       <tr>
-        <td><%= link_to(individual_path(individual)) do %>
+        <td><%= link_to(fulcrum_partial_path(:individuals, Base64.urlsafe_encode64(individual.identifier))) do %>
             <span class="glyphicon glyphicon-sunglasses" aria-hidden="true"></span> Show
           <% end %>
         </td>
         <td><%= individual.identifier %></td>
         <td><%= individual.name %></td>
         <td><%= individual.email %></td>
+        <td><%= individual.policies.count() %></td>
       </tr>
     <% end %>
-    <tr>
-      <td><button name="submit" type="submit" value="filter">Filter</button></td>
-      <td><input type="text" name="identifier_like" value="<%= params[:identifier_like] %>" size="<%= size %>"></td>
-      <td><input type="text" name="name_like" value="<%= params[:name_like] %>" size="<%= size %>"></td>
-      <td><input type="text" name="entity_id_like" value="<%= params[:email_like] %>" size="<%= 3 * size %>"></td>
-    </tr>
   </table>
 </form>
 <%= paginate individuals %>
