Resolves HELIO-2262: Add identifier, name, and noid to components table

--- a/app/views/fulcrum/_component.html.erb
+++ b/app/views/fulcrum/_component.html.erb
@@ -7,11 +7,11 @@
   </tr>
   <tr>
     <td>identifier</td>
-    <td><%= component.noid %></td>
+    <td><%= component.identifier %></td>
   </tr>
   <tr>
     <td>name</td>
-    <td><%= component.noid %></td>
+    <td><%= component.name %></td>
   </tr>
   <tr>
     <td>noid</td>
